--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -23,6 +23,19 @@
 </head>
 
 <body>
+  <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34679616-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   <section class="sidebar">
     <a href="/">
       <img src="http://www.gravatar.com/avatar/0764d8fb09760f0bec8800b15f284274?s=150" height="75" width="75" class="avatar" />
