Updating site with current resume.

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -54,7 +54,7 @@
     <section class="sections">
       <ul>
         <li><a href="/about.html">about</a></li>
-        <li><a href="/resume.html">resume</a></li>
+        <li><a href="/nick_gerakines_resume.pdf">resume</a></li>
         <li><a href="/">posts</a></li>
       </ul>
     </section>
