Updating site layout to reflect job change.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: layout
       </a>
 
       <p>
-        I'm a developer at Blizzard Entertainment. Follow me on <a href="https://twitter.com/ngerakines">Twitter</a> or
+        I'm a developer at YouSendIt. Follow me on <a href="https://twitter.com/ngerakines">Twitter</a> or
         <a href="https://plus.google.com/118120736401585084374">Google+</a>.
       </p>
     </section>
