--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -56,6 +56,7 @@
         <li><a href="/about.html">about</a></li>
         <li><a href="/nick_gerakines_resume.pdf">resume</a></li>
         <li><a href="/">posts</a></li>
+        <li><a href="/ohio.html">WTD Ohio</a></li>
       </ul>
     </section>
   </section>
