Removing google analytics. Misc editing of last blog post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,10 @@ layout: layout
   <h1>
     <a href="{{ page.url }}">{{ page.title }}</a>
   </h1>
-
   <section class="byline">
     {{ page.date | date: "%B %e, %Y" }}
   </section>
-
   {{ content }}
-
-  <!-- TODO: change links, gravatar, and bio here -->
   <section class="meta">
     <h3>Discussion, links, and tweets</h3>
     <section class="copy">
@@ -22,7 +18,7 @@ layout: layout
       </a>
 
       <p>
-        I'm a developer at YouSendIt. Follow me on <a href="https://twitter.com/ngerakines">Twitter</a> or
+        I'm a developer at Hightail. Follow me on <a href="https://twitter.com/ngerakines">Twitter</a> or
         <a href="https://plus.google.com/118120736401585084374">Google+</a>.
       </p>
     </section>
