--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: layout
   <section class="meta">
     <h3>Discussion, links, and tweets</h3>
     <section class="copy">
-      <a href="https://twitter.com/holman">
+      <a href="https://twitter.com/ngerakines">
         <img src="http://gravatar.com/avatar/0764d8fb09760f0bec8800b15f284274?s=142" height="50" width="50" />
       </a>
 
       <p>
         I'm a developer at Hightail. Follow me on <a href="https://twitter.com/ngerakines">Twitter</a> or
-        <a href="https://plus.google.com/118120736401585084374">Google+</a>.
+        <a href="https://plus.google.com/%2BNickGerakines">Google+</a>.
       </p>
     </section>
   </section>
