Misc layout updates

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,9 @@
 
   <title>
     {% if page.title %}
-      {{ page.title }} &middot; {{ site.title }}
+      {{ page.title }} &middot; ngerakines.me
     {% else %}
-      {{ site.title }} &middot; {{ site.tagline }}
+      {{ site.title }} &middot; ngerakines.me
     {% endif %}
   </title>
 
@@ -21,13 +21,11 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="/public/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  <link rel="author" href="https://plus.google.com/u/0/118120736401585084374">
-  <link rel="publisher" href="https://plus.google.com/u/0/118120736401585084374">
+  <link rel="author" href="https://plus.google.com/+NickGerakines?rel=author">
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@ngerakines"/>
   <meta name="twitter:domain" content="Nick Gerakines"/>
