--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-47264934-1', 'ngerakines.me');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
