Adding rel=me data.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,11 @@
   <meta name="twitter:site" content="@ngerakines"/>
   <meta name="twitter:domain" content="Nick Gerakines"/>
   <meta name="twitter:creator" content="@ngerakines"/>
+
+  <link href="https://twitter.com/ngerakines" rel="me" />
+  <link href="https://github.com/ngerakines" rel="me" />
+  <link href="https://www.facebook.com/ngerakines" rel="me" />
+  <link href="https://plus.google.com/+NickGerakines" rel="me">Google</a></li>
+  <link href="sms:+14159631165" rel="me">(415) 963-1165</a></li>
+  <link href="mailto:nick@gerakines.net" rel="me">nick@gerakines.net</a></li>
 </head>
