--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
   <link href="https://twitter.com/ngerakines" rel="me" />
   <link href="https://github.com/ngerakines" rel="me" />
   <link href="https://www.facebook.com/ngerakines" rel="me" />
-  <link href="https://plus.google.com/+NickGerakines" rel="me">Google</a></li>
-  <link href="sms:+14159631165" rel="me">(415) 963-1165</a></li>
-  <link href="mailto:nick@gerakines.net" rel="me">nick@gerakines.net</a></li>
+  <link href="https://plus.google.com/+NickGerakines" rel="me" />
+  <link href="sms:+14159631165" rel="me" />
+  <link href="mailto:nick@gerakines.net" rel="me" />
 </head>
