--- a/themes/hyde-x/layouts/partials/head.html
+++ b/themes/hyde-x/layouts/partials/head.html
@@ -28,17 +28,25 @@
 
   <meta name="description" content="{{ if ne .Description "" }}{{ .Description }}{{ else }}{{ .Site.Params.defaultDescription }}{{ end }}">
   <meta name="keywords" content="{{ range $index, $element := .Keywords }}{{ if gt $index 0 }},{{ end }}{{ . }}{{ else }}{{ .Site.Params.defaultKeywords }}{{ end }}">
-  {{ with .Site.Params.googleAnalytics }}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <link rel="author" href="https://plus.google.com/+NickGerakines?rel=author">
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@ngerakines"/>
+  <meta name="twitter:title" value="{{ .Title }} &middot; {{ .Site.Author.name }}" />
+  <meta name="twitter:domain" content="ngerakines.me"/>
+  <meta name="twitter:creator" content="@ngerakines"/>
+  <meta name="twitter:description" value="{{ if ne .Description "" }}{{ .Description }}{{ else }}{{ .Site.Params.defaultDescription }}{{ end }}" />
+  <meta name="twitter:url" value="{{ .Permalink }}" />
 
-    ga('create', '{{ . }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {{ end }}
+  <link href="https://twitter.com/ngerakines" rel="me" />
+  <link href="https://github.com/ngerakines" rel="me" />
+  <link href="https://www.facebook.com/ngerakines" rel="me" />
+  <link href="https://plus.google.com/+NickGerakines" rel="me" />
+  <link href="sms:+14159631165" rel="me" />
+  <link href="mailto:nick@gerakines.net" rel="me" />
+  <meta property="og:title" content="{{ .Title }} &middot; {{ .Site.Author.name }}" />
+  <meta property="og:url" content="{{ .Permalink }}" />
+  <meta property="og:site_name" content="{{ .Site.Author.name }}"/>
+  <meta property="og:description" content="{{ if ne .Description "" }}{{ .Description }}{{ else }}{{ .Site.Params.defaultDescription }}{{ end }}"/>
 </head>
 <body{{ with .Site.Params.theme }} class="{{ . }}"{{ end }}>
 {{ partial "sidebar.html" . }}
