--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,5 @@
   <link href="https://plus.google.com/+NickGerakines" rel="me" />
   <link href="sms:+14159631165" rel="me" />
   <link href="mailto:nick@gerakines.net" rel="me" />
+  <link rel="me" href="https://off-the-clock.us/@ngerakines" />
 </head>
