--- a/themes/hyde-x/layouts/partials/sidebar/footer.html
+++ b/themes/hyde-x/layouts/partials/sidebar/footer.html
@@ -1,3 +1,3 @@
 <p>Copyright &copy; {{ now.Format "2006" }} <a href="{{ "/license/" | absURL }}">License</a><br/>
        Powered by <a href="http://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
-<p><a href="https://www.sslhound.com/v/ngerakines.me"><object data="https://www.sslhound.com/shield/ngerakines.me" type="image/svg+xml"></object></a></p>
+<p><a href="https://www.sslhound.com/v/ngerakines.me"><img src="https://www.sslhound.com/v/ngerakines.me/badge.png" alt="ngerakines.me status"/></a></p>
